// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match second snapshot 1`] = `
<div>
  <div>
    <p
      data-testid="group-description"
    >
      This group is used for testing.
    </p>
  </div>
</div>
`;

exports[`should match snapshot 1`] = `
<div>
  <div>
    <p
      data-testid="group-description"
    >
      [No description has been written]
    </p>
  </div>
</div>
`;
